--- a/mystyle.css
+++ b/mystyle.css
@@ -3,10 +3,13 @@
     --main-font-family: 'Inria Sans', sans-serif;
     --main-color: #891B26;
     --btn-text-color: color: rgb(36, 36, 36);
+    --border-style: 1px solid var(--main-color);
+    --background-gradient: linear-gradient(43deg, rgba(137, 27, 38, 0.5) 0%, rgba(73, 14, 20, 0.164) 50%, rgba(137, 27, 38, 0.5) 100%);
+    --background-hover: linear-gradient(43deg, rgba(73, 14, 20, 0.164) 0%, rgba(137, 27, 38, 0.5) 50%, rgba(73, 14, 20, 0.164) 100%);
 }
 
 * {
- font-family: var(--main-font-family);
+    font-family: var(--main-font-family);
 }
 
 body {
@@ -27,7 +30,7 @@ h1 {
 }
 
 .btn-custom {
-    background: linear-gradient(43deg, rgba(137, 27, 38, 0.5) 0%, rgba(73, 14, 20, 0.164) 50%, rgba(137, 27, 38, 0.5) 100%);
+    background: var(--background-gradient);
     border-color: rgba(137, 27, 38, 0.5);
     width: 15vw;
     color: var(--btn-text-color);
@@ -37,21 +40,41 @@ h1 {
     border-width: .2rem;
     border-color: var(--main-color);
     padding: .4rem;
-    background: linear-gradient(43deg, rgba(73, 14, 20, 0.164) 0%, rgba(137, 27, 38, 0.5) 50%, rgba(73, 14, 20, 0.164) 100%);
+    background: var(--background-hover);
     color: black;
     font-weight: bolder;
 }
 
-/* .container .row:nth-child(2) .col-12:nth-child(2) {
-    border: 1px solid var(--main-color);
-    border-radius: 1rem;
-    width: 10%;
-    vertical-align: middle;
-} */
-
 .form-control{
-    border: 1px solid var(--main-color);
+    border: var(--border-style);
     border-radius: .25rem;
     width: 15vw;
+}
+
+.container .row:nth-child(3) .col-12 {
+    display: flex;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    border-radius: .25rem;
+    -webkit-box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.1); 
+    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cell {
+    width: 3.5vw;
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cell:hover {
+    border: var(--border-style);
+    cursor: pointer;
+    border-radius: .25rem;
+    -webkit-box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4); 
+    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.4);
 }
 
