--- a/mystyle.css
+++ b/mystyle.css
@@ -70,11 +70,17 @@ h1 {
     align-items: center;
 }
 
-.cell:hover {
+/* .cell:hover {
     border: var(--border-style);
     cursor: pointer;
     border-radius: .25rem;
     -webkit-box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4); 
     box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.4);
-}
+} */
 
+.highlight {
+    border: var(--border-style);
+    border-radius: .25rem;
+    -webkit-box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4); 
+    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.4);
+}
